Fixed an issue causing pixels overflow
There was a miscalculation where the container could not fit
all the pixels causing an overflow outside the container.

--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body{
     overflow: hidden;
 }
 #container{
-    width: 1024px;
-    height: 1024px;
+    width: 1026px;
+    height: 1026px;
     background-color: cyan;
     display: flex;
     flex-wrap: wrap;
